--- a/fundooApp/templates/deleteLabel.html
+++ b/fundooApp/templates/deleteLabel.html
@@ -78,6 +78,7 @@
                    </div>
 
                       <icon></icon>
+                      <urlimage></urlimage>
               </md-card>
     </div>
 
@@ -113,6 +114,7 @@
                  </div>
                 <div layout="row" style="height: 50px;" layout-align="space-around center">
                     <icon></icon>
+                    <urlimage></urlimage>
                 </div>
             </md-card>
   </div>
