popup page changed with scrapping

--- a/fundooApp/css/style.css
+++ b/fundooApp/css/style.css
@@ -136,6 +136,11 @@ overflow: hidden;
   margin-top:16px;padding-left:10px
 }
 
+.pinclass{
+  padding-left: 218px;padding-right: 255px;
+}
+}
+
 .paddingclas{
   padding-left: 218px;padding-right: 255px;
 }
