--- a/fundooApp/templates/icon.html
+++ b/fundooApp/templates/icon.html
@@ -51,7 +51,7 @@
 
 
 <div ng-mouseover="open = true" ng-mouseleave="open = false" style="padding-left:47px;">
-  <span ng-click="showCollaborator($event)">
+  <span ng-click="showCollaborator($event,note)">
     <md-icon ><img src="images/baseline-person_add-24px.svg"/></md-icon>
     <md-tooltip>Collabarator</md-tooltip>
 </span>
