--- a/fundooApp/templates/collaborator.html
+++ b/fundooApp/templates/collaborator.html
@@ -3,37 +3,77 @@
 <md-input-container md-no-float class="md-block">
    <div class="collaborator" >Collaborators</div>
  </md-input-container>
+ <md-divider></md-divider>
+ <div class="colla" ng-init="getUser()">
+ 	<div style="align-items: center; display: flex; padding: 5px;">
 
-   <div style="align-items: center;display: flex;padding: 5px;">
+ 		<div class="mycollaborator">
+ 			<div>
+ 				<img
+ 					style="border-radius: 50%; margin: -1px 1px 14px -1px;"
+ 					src="" />
+ 			</div>
+ 		</div>
+ 		<div style="display: flex; padding: 5px;" ng-pepeat="user in userData">
+ 			<div style="font-size: 13px;">
+ 				<span style="font-weight: 700;">{{user.name}}</span> <span
+ 					style="font-style: italic; margin-left: 5px;">(Owner)</span>
+ 				<div style="color: rgba(0, 0, 0, .54);">{{user.email}}</div>
+ 			</div>
+ 		</div>
+ 	</div>
 
- <div class="mycollaborator">
-<div>
-<img class="coll44fhf" src="images/baseline-person_add-24px.svg" /></div>
-</div>
-<div style="display: flex; padding: 5px;">
-<div style="font-size: 13px;">
-<span style="font-weight: 700;">{{userDetails.iss}}</span>
-<span style="font-style: italic;margin-left: 5px;">(Owner)</span>
-<div style="color: rgba(0,0,0,.54);">{{userDetails.sub}}</div>
-</div>
-</div>
-</div>
 
- <div ng-init="getallCollaborators()" class="anotherdiv" layout="column" layout-align="space-around center">
- <div ng-repeat="collaborators in getCollaborators" layout="row" style="margin: 0px 0px 0px 170px;">
+ <div ng-repeat="user in note.collaboratedUser" style="align-items: center; display: flex; padding: 5px;">
 
- <div class="div3">
-<div>
-<img style="opacity: 0.5;background-size: 28px 24px;width: 100%;" src="images/baseline-person_add-24px.svg" />
-</div>
-</div>
-<div style="font-size: 13px;flex: 1 0 auto; margin: 24px 0px 0px 20px;">
-<span style="color: rgba(0,0,0,.54);">{{collaborators.email}}</span>
-</div>
-<md-button class="button" ng-click="deleteCollaborator(collaborators)">
-<img src="images/baseline-close-24px.svg"/>
-<md-tooltip>CANCEL</md-tooltip>
-</md-button>
+ 		<div class="mycollaborator">
+ 			<div>
+ 				<img
+ 					style="border-radius: 50%; margin: -1px 1px 14px -1px; height: 40px; width: 40px; box-sizing: border-box;"
+ 					ng-src="{{user.userProfile}}" />
+ 			</div>
+ 		</div>
+ 		<div style="display: flex; padding: 5px;">
+ 			<div style="font-size: 13px;">
+ 				<span style="font-weight: 700;">{{user.name}}</span>
+ 				<div style="color: rgba(0, 0, 0, .54);">{{user.email}}</div>
+ 			</div>
+ 		</div>
+ 		<md-button ng-click="removeCollaboratoronNote(user)"> <img src="images/baseline-delete-24px.svg" /> <md-tooltip>Delete</md-tooltip>
+ 		</md-button>
+ 	</div>
 
-</div>
-</div>
+ 	<div>
+ 		<div>
+ 			<div>
+ 				<img src="images/baseline-person_add-24px.svg" />
+ 			</div>
+ 		</div>
+ 		<div ng-init="getallUsers()">
+ 			<md-input-container md-no-float> <md-select
+ 				style="outline:none;background-color: white;" type="text"
+ 				placeholder="Person or email to share with"
+ 				aria-label="Person or email to share with" ng-model="email"
+ 				maxlength="320" role="combobox" aria-autocomplete="list"
+ 				aria-haspopup="false" aria-expanded="false"> <md-option
+ 				ng-repeat="email in getUsers" ng-value="email">{{email[0]}}</md-option></md-input-container>
+
+ 			<md-button ng-click="addCollaboratorOnNote(email)" class="mybutton">
+ 			<img src="images/baseline-done-24px.svg" /> </md-button>
+
+ 		</div>
+ 	</div>
+ </div>
+ <div>
+   <div>
+  	<div style="background-color: rgba(0, 0, 0, 0.07); text-align: right;">
+  		<md-button class="md-button" ng-click="null"
+  			style="margin-right: 2px;"> <Strong
+  			style="font-size: 13px;">Cancel</Strong> </md-button>
+  	</div>
+  	<div>
+  		<md-button class="md-button" style="margin: -60px 0px 8px 402px;">
+  		<Strong style="font-size: 13px;">Save</Strong> </md-button>
+  	</div>
+  </div>
+ 	<div>
