--- a/fundooApp/templates/collaborator.html
+++ b/fundooApp/templates/collaborator.html
@@ -1,79 +1,49 @@
-<md-dialog aria-label="Label" class="label-dialog" style="width:60%;min-height: 245px;">
-   <md-dialog-content>
-<md-input-container md-no-float class="md-block">
-   <div class="collaborator" >Collaborators</div>
- </md-input-container>
- <md-divider></md-divider>
- <div class="colla" ng-init="getUser()">
- 	<div style="align-items: center; display: flex; padding: 5px;">
 
- 		<div class="mycollaborator">
- 			<div>
- 				<img
- 					style="border-radius: 50%; margin: -1px 1px 14px -1px;"
- 					src="" />
- 			</div>
- 		</div>
- 		<div style="display: flex; padding: 5px;" ng-pepeat="user in userData">
- 			<div style="font-size: 13px;">
- 				<span style="font-weight: 700;">{{user.name}}</span> <span
- 					style="font-style: italic; margin-left: 5px;">(Owner)</span>
- 				<div style="color: rgba(0, 0, 0, .54);">{{user.email}}</div>
- 			</div>
- 		</div>
- 	</div>
+<md-dialog style="width:550px;height:250px;">
+<div class="md-dialog-content" ng-init="getUser()">
+<div><strong>Collaborator</strong></div>
+<md-divider></md-divider>
+<div layout="row">
+  <div style="width:40px;height:40px;border-radius:40px;border: 1px solid rgba(0,0,0,.5); margin-top: 10px; " >
+    <img src="{{userInfo.profilepicImage}}" style="width:100%;border-radius:50%">
+   </div>
+   <div layout="column" style="margin-top:5px">
+   <div><strong>{{userInfo.firstname}} {{userInfo.lastname}} </strong></div>
+  <div> {{userInfo.emailId}} (Owner)</div>
+</div>
+</div>
 
 
- <div ng-repeat="user in note.collaboratedUser" style="align-items: center; display: flex; padding: 5px;">
-
- 		<div class="mycollaborator">
- 			<div>
- 				<img
- 					style="border-radius: 50%; margin: -1px 1px 14px -1px; height: 40px; width: 40px; box-sizing: border-box;"
- 					ng-src="{{user.userProfile}}" />
- 			</div>
- 		</div>
- 		<div style="display: flex; padding: 5px;">
- 			<div style="font-size: 13px;">
- 				<span style="font-weight: 700;">{{user.name}}</span>
- 				<div style="color: rgba(0, 0, 0, .54);">{{user.email}}</div>
- 			</div>
- 		</div>
- 		<md-button ng-click="removeCollaboratoronNote(user)"> <img src="images/baseline-delete-24px.svg" /> <md-tooltip>Delete</md-tooltip>
- 		</md-button>
- 	</div>
-
- 	<div>
- 		<div>
- 			<div>
- 				<img src="images/baseline-person_add-24px.svg" />
- 			</div>
- 		</div>
- 		<div ng-init="getallUsers()">
- 			<md-input-container md-no-float> <md-select
- 				style="outline:none;background-color: white;" type="text"
- 				placeholder="Person or email to share with"
- 				aria-label="Person or email to share with" ng-model="email"
- 				maxlength="320" role="combobox" aria-autocomplete="list"
- 				aria-haspopup="false" aria-expanded="false"> <md-option
- 				ng-repeat="email in getUsers" ng-value="email">{{email[0]}}</md-option></md-input-container>
-
- 			<md-button ng-click="addCollaboratorOnNote(email)" class="mybutton">
- 			<img src="images/baseline-done-24px.svg" /> </md-button>
-
- 		</div>
- 	</div>
- </div>
- <div>
-   <div>
-  	<div style="background-color: rgba(0, 0, 0, 0.07); text-align: right;">
-  		<md-button class="md-button" ng-click="null"
-  			style="margin-right: 2px;"> <Strong
-  			style="font-size: 13px;">Cancel</Strong> </md-button>
-  	</div>
-  	<div>
-  		<md-button class="md-button" style="margin: -60px 0px 8px 402px;">
-  		<Strong style="font-size: 13px;">Save</Strong> </md-button>
-  	</div>
+ <div layout="row" ng-repeat="collaborator in getUserInfo">
+  <!-- <div ng-if="collaborator.profilepicImage" style="width:40px;height:40px;border-radius:50px;border: 1px solid rgba(0,0,0,.5); margin-top: 10px; ">
+    <img src="{{collaborator.profilepicImage}}" style="width:100%;border-radius:50%">
   </div>
- 	<div>
+  <div style="margin-top:15px">{{collaborator.emailId}}</div>
+  <div style="margin-top:15px">
+    <md-icon ng-click="removeCollaboratoronNote(user)"><i class="material-icons">cancel</i></md-icon>
+    <md-tooltip>Remove collaborator</md-tooltip>
+  </div> -->
+</div>
+
+<div layout="row">
+  <div style="margin-top: 10px; ">
+  <md-icon style="margin-top:6px;margin-left:5px;" ><img src="images/baseline-person_add-24px.svg"></md-icon>
+  </div>
+
+  <md-input-container >
+  <md-select ng-model="user" placeholder="Person or email to share with">
+
+    <md-option ng-value="user" ng-repeat="user in getUserInfo" >{{user.emailId }}</md-option>
+
+  </md-select>
+</md-input-container>
+    <md-icon ng-click=""  style=" margin-left: 200px;"><i class="material-icons">done</i></md-icon>
+    <md-tooltip>Add collaborator</md-tooltip>
+</div>
+<div layout="row" layout-align="end end">
+  <md-button ng-click="cancel()">Cancel</md-button>
+  <md-button ng-click="addCollaboratorOnNote(user)">Save</md-button>
+</div>
+
+</div>
+</md-dialog>
