--- a/fundooApp/templates/popupnote.html
+++ b/fundooApp/templates/popupnote.html
@@ -25,7 +25,7 @@
                 </md-icon>
               </span>
                   <md-menu-content>
-                    <md-menu-item><md-button ng-click="">remove</md-button></md-menu-item>
+                    <md-menu-item><md-button ng-click="removeUrlFromNote(note)">remove</md-button></md-menu-item>
                     <md-menu-item><md-button ng-click="">copy</md-button>
                     </md-menu-item>
                   </md-menu-content>
