--- a/fundooApp/templates/dashboard.html
+++ b/fundooApp/templates/dashboard.html
@@ -13,23 +13,22 @@
       <div layout="row" layout-align="end end">  <md-button class="md-icon-button"><img src="images/pin0.svg" >
           <md-tooltip>pin</md-tooltip></md-button>
     </div>
-      <input type="text" placeholder="Title" ng-model="title" id="notecard1" style="margin-top:-38px;"/ >
+      <input type="text" placeholder="Title" ng-model="title" id="notecard1" style="margin-top:-38px;border:0px none;outline:none;"/ >
 
-        <div contenteditable="true" data-placeholder="Take a note..." ng-model="description" id="notecard1" ng-bind-html="description"></div>
+        <div contenteditable="true" data-placeholder="Take a note..." ng-model="description" id="notecard1" ng-bind="description"  style="border:0px none;outline:none;margin-left:10px;" ></div>
       <div><icon> </icon></div>
       <div><md-button ng-click="showWhenClicked=false;noteModel()" id="close-btn">CLOSE</md-button></div>
     </md-card>
   </div>
 
-
-    <div>  <md-subheader style="margin-left:295px;" id="header-btn" class="pinother"><strong>Pinned</strong> </md-subheader></div>
-      <div layout="row"  layout-align="center end" layout-wrap  data-ng-init="getAllNote()" class="pinclass">
+    <div ng-show="showPin">  <md-subheader style="margin-left:290px;" id="header-btn" class="pinother"><strong>Pinned</strong> </md-subheader></div>
+      <div  style="position:relative;" layout="row"  layout-align="center end" layout-wrap  data-ng-init="getAllNote()" class="pinclass">
           <md-card class="dashboard"  style="background-color:{{note.color}};width:250px;"  ng-repeat="note in notes |filter:{trash:false,pin:true,archive:false} |orderBy: '-notes':true |filter: searchText" >
-
-           <div ng-click="updatePin(note);"style="margin-left: 227px;">
-             <img ng-if="note.pin === true && note.image!==null"  src="images/bluepin.svg"/>
+            <img  ng-click="showAdvanced($event,note);" ng-src="{{note.image}}" class="md-card-image">
+           <div style="position:absolute;margin-left: 233px;" ng-click="updatePin(note);" style="height:18px;width:18px;" >
+          <img ng-if="note.pin === true && note.image!==null"  src="images/bluepin.svg"/>
                <md-tooltip>Pin Note</md-tooltip></div>
-               <img  ng-click="showAdvanced($event,note);" ng-src="{{note.image}}" class="md-card-image">
+
 
             <div class="tit1"><strong>{{note.title}}</strong></div>
                     <md-card-content class="center" class="placesize" ng-click="showAdvanced($event,note)">
@@ -52,11 +51,11 @@
                 </md-card>
 
 
-<div><md-subheader style="margin-left:295px;" id="header-btn" class="pinother" ><strong>Others</strong> </md-subheader></div>
+<div ng-show="showOther" style="postion:relative"><md-subheader style="margin-left:295px;" id="header-btn" class="pinother" ><strong>Others</strong> </md-subheader></div>
   <div  layout="row"  layout-align="center end" layout-wrap data-ng-init="getAllNote()" style="padding-left: 211px;padding-right: 200px;">
         <md-card  class="dashboard"  style="background-color:{{note.color}};width:250px;margin-top: 50px;"  ng-repeat="note in notes |filter:{trash:false,pin:false,archive:false} |orderBy: '-notes':true |filter: searchText">
 
-          <span ng-click="updatePin(note)" >
+          <span style="position:absolute;"  ng-click="updatePin(note)" >
               <img ng-if="note.image!=null && note.pin === true"  src="images/bluepin.svg"  >
               <img ng-if="note.image!=null && note.pin=== false" src="images/pin0.svg" style="padding-left: 225px;">
                <md-tooltip>Pin Note</md-tooltip>
